# robot_demo

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_model/share/robot_model/: local_setup.sh  package.bash  package.sh  package.xml  package.zsh
install/robot_model/share/robot_model/description/: robot.urdf.xacro  robot_core.xacro
install/robot_model/share/robot_model/launch/: rsp.launch.py
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_node
install/rplidar_ros/share/rplidar_ros/: local_setup.sh  package.sh  package.xml
install/rplidar_ros/share/rplidar_ros/launch/: rplidar_a1_launch.py  rplidar_a3_launch.py  rplidar_s1_launch.py  rplidar_s3_launch.py  rplidar_t1_launch.py  view_rplidar_a2m12_launch.py  view_rplidar_a3_launch.py  view_rplidar_c1_launch.py  view_rplidar_s2_launch.py  view_rplidar_s2e_launch.py  view_rplidar_s3_launch.py
install/rplidar_ros/share/rplidar_ros/rviz/: rplidar_ros.rviz
log/: latest_build
my_msg/: CMakeLists.txt  package.xml
my_msg/launch/: my_msg_start.launch  my_msg_start.launch.py
my_msg/msg/: DriverControl.msg  DriverOdo.msg  driver_odo.msg.bak  ir_state.msg
my_msg/src/: trans.cpp
nav/: CMakeLists.txt  package.xml
nav/config/: log4j.config
nav/launch/: amcl.launch  gmapping.launch  move_base.launch  nav.launch  pub_map.launch  save_map.launch  start_slam.launch
nav/map/: Room.yaml  conferenceRoom.yaml  nav.pgm
nav/msg/: driver_control.msg
nav/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
nav/scripts/: move_pub.py
openslam_gmapping/include/gmapping/scanmatcher/: scanmatcher.h
openslam_gmapping/scanmatcher/: scanmatcher.cpp
robot_base/: CMakeLists.txt  package.xml
robot_base/include/robot_base/: robot_base.h
robot_base/launch/: ekf_imu_odom.launch  ekf_imu_odom.launch.py  start_stm32.launch  start_stm32.launch.py  start_tf.launch  start_tf.launch.py
robot_base/param/: ekf_config.yaml
robot_base/params/: ekf_config.yaml
robot_base/src/: robot_cmd.cpp  robot_imu.cpp  robot_odom.cpp  robot_odom_time.cpp  robot_rod_cmd.cpp
robot_model/: CMakeLists.txt  package.xml
robot_model/config/world/: model.sdf  pillar.sdf
robot_model/description/: gazebo_control.xacro  imu.xacro  lidar.xacro  odom.xacro  robot.urdf.xacro  robot_core.xacro
robot_model/launch/: launch_sim.launch  launch_sim.launch.py  rsp.launch  rsp.launch.py
rplidar_ros/: CHANGELOG.rst  CMakeLists.txt  README.md
rplidar_ros/debian/: udev
rplidar_ros/include/: rplidar_node.hpp
rplidar_ros/launch/: rplidar_a2m12_launch.py  rplidar_c1_launch.py  rplidar_s1_tcp_launch.py  rplidar_s2.launch  rplidar_s2_launch.py  rplidar_s2e_launch.py  view_rplidar_a2m8_launch.py  view_rplidar_s1_launch.py  view_rplidar_s1_tcp_launch.py  view_rplidar_t1_launch.py
rplidar_ros/scripts/: create_udev_rules.sh
rplidar_ros/sdk/: Makefile
rplidar_ros/sdk/include/: rplidar.h  rplidar_cmd.h  rplidar_driver.h  rplidar_protocol.h  sl_lidar.h  sl_lidar_cmd.h  sl_lidar_driver.h  sl_lidar_driver_impl.h  sl_lidar_protocol.h
rplidar_ros/sdk/src/: rplidar_driver.cpp  sl_async_transceiver.cpp  sl_async_transceiver.h  sl_crc.cpp  sl_lidar_driver.cpp  sl_lidarprotocol_codec.cpp  sl_lidarprotocol_codec.h  sl_serial_channel.cpp  sl_tcp_channel.cpp  sl_udp_channel.cpp
rplidar_ros/sdk/src/arch/linux/: net_serial.cpp  net_socket.cpp  thread.hpp  timer.cpp  timer.h
rplidar_ros/sdk/src/arch/macOS/: net_serial.cpp  net_serial.h  net_socket.cpp  thread.hpp  timer.cpp  timer.h
rplidar_ros/sdk/src/arch/win32/: net_serial.cpp  net_socket.cpp  timer.cpp  timer.h  winthread.hpp
rplidar_ros/sdk/src/dataunpacker/: dataunnpacker_commondef.h  dataunnpacker_internal.h  dataunpacker.cpp  dataunpacker.h  dataupacker_namespace.h
rplidar_ros/sdk/src/dataunpacker/unpacker/: handler_capsules.cpp  handler_capsules.h  handler_hqnode.cpp  handler_hqnode.h  handler_normalnode.cpp  handler_normalnode.h
rplidar_ros/sdk/src/hal/: byteorder.h  event.h  locker.h  socket.h  thread.h  types.h  waiter.h
usb_cam/launch/: usb_cam.launch
